--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.7.7",
     "path": "^0.12.7",
     "pg": "^8.3.2",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+     "sqlite3": "^5.1.2"
   }
 }
